--- a/index1.css
+++ b/index1.css
@@ -588,6 +588,7 @@ header nav ul li a:hover {
 
     #contact form input,
     #contact form textarea {
+        width:80%;
         font-size: 14px;
         padding: 12px;
         margin: 8px 0;
